# genai-dev-guide

./: .dockerignore  .env  .env.cloud-sql.example  .env.example  .gitignore  CLOUD_SQL_SETUP.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  init.sql  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 20250904_185917_initial_migration.py
app/: main.py
app/application/: product_service.py
app/core/: cloud_sql.py  config.py  database.py  dependencies.py  secret_manager.py
app/domain/: __init__.py  entities.py
app/infrastructure/: __init__.py  ai_factory.py  ai_services.py  database.py  exceptions.py  external_services.py  prompts.py
app/models/: product.py
app/routers/: __init__.py  product_router.py  schemas.py
tests/: conftest.py
tests/e2e/: test_api_endpoints.py
tests/integration/: test_ai_services.py  test_gemini_direct.py
tests/unit/: test_ai_factory.py  test_entities.py  test_prompts.py  test_simple_ddd.py
